--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "blockmap-viewer",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/dat.gui": "^0.7.4",
-    "@types/jest": "24.0.18",
-    "@types/node": "^12.7.3",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
-    "dat.gui": "^0.7.6",
-    "pixi-viewport": "^4.2.2",
-    "pixi.js": "^5.1.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-pixi-fiber": "^0.9.3",
-    "react-scripts": "3.1.1",
-    "ts-node": "^8.3.0",
-    "tslint": "^5.19.0",
-    "typescript": "3.6.2"
-  },
-  "scripts": {
-    "start": "npm run import-blockmap-images && react-scripts start",
-    "build": "npm run import-blockmap-images && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "import-blockmap-images": "npx node bin/import-blockmap-images.js"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {}
+	"name": "blockmap-viewer",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@types/dat.gui": "^0.7.4",
+		"@types/jest": "24.0.18",
+		"@types/node": "^12.7.3",
+		"@types/react": "16.9.2",
+		"@types/react-dom": "16.9.0",
+		"dat.gui": "^0.7.6",
+		"pixi-viewport": "^4.2.2",
+		"pixi.js": "^5.1.2",
+		"react": "^16.9.0",
+		"react-dom": "^16.9.0",
+		"react-pixi-fiber": "^0.9.3",
+		"react-scripts": "3.1.1",
+		"ts-node": "^8.3.0",
+		"tslint": "^5.19.0",
+		"typescript": "3.6.2"
+	},
+	"scripts": {
+		"start": "npm run import-blockmap-images && react-scripts start",
+		"build": "npm run import-blockmap-images && react-scripts build",
+		"deploy": "sh bin/deploy.sh",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"import-blockmap-images": "npx node bin/import-blockmap-images.js"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {}
 }
